# rust_html

./: Cargo.toml  LICENSE.md  README.md
examples/: axum.rs  axum_calculator.rs  simple.rs
rust_html_macros/: Cargo.toml
rust_html_macros/src/: lib.rs  parse.rs  test.html  util.rs
rust_html_tests/: Cargo.toml
rust_html_tests/src/: lib.rs
src/: integration.rs  lib.rs
